--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>
             <center>Perasanna S</center>
         </h1>
-        <center>><img src="Images/Perasanna.jpg alt="Perasanna.img"height=400px></center
+        <center>><img src="Images/Perasanna.jpg" alt="Perasanna.img"height=400px></center
             <br
         <h2>
             <center>Hello Myself Perasanna and I Completed my degree (B.E) in Computer Science Engineering and I looking for Font-end development jobs </center>
